--- a/ChatApp1/View/Base.lproj/Main.storyboard
+++ b/ChatApp1/View/Base.lproj/Main.storyboard
@@ -165,11 +165,11 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="75" id="nk3-My-xXB" customClass="CustomCell" customModule="ChatApp1" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="75"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="105" id="nk3-My-xXB" customClass="CustomCell" customModule="ChatApp1" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="105"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nk3-My-xXB" id="h7n-ZA-rfj">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="75"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="105"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -191,6 +191,10 @@
                         <viewLayoutGuide key="safeArea" id="hsH-89-m90"/>
                     </view>
                     <navigationItem key="navigationItem" id="nuC-2u-0BY"/>
+                    <connections>
+                        <outlet property="messageTextField" destination="uul-Om-v2s" id="8rl-vm-hlc"/>
+                        <outlet property="tableView" destination="pyq-wt-CyH" id="x7d-UW-9mP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tCk-gH-7iu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
